testdata/bad/timestamp_62.ion
2004-12-11T12:10:11-888:10
